[gd_scene load_steps=2 format=3 uid="uid://jv60xuolhlcg"]

[ext_resource type="Script" uid="uid://b1ajedg2vnm47" path="res://ui/message_container/message_container.gd" id="1_dnic8"]

[node name="MessageContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dnic8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Messages" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
placeholder_text = "Message"

[connection signal="focus_entered" from="MarginContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_focus_exited"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_text_submitted"]
